--- a/01-express-npm/package.json
+++ b/01-express-npm/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "socket.io": "^1.4.5",
+    "socket.io-client": "^1.4.5",
     "express": "^4.15.3",
     "jade": "^1.11.0"
   }
