--- a/02-app/package.json
+++ b/02-app/package.json
@@ -40,6 +40,7 @@
     "jquery": "^3.2.1",
     "moment": "^2.12.0",
     "moment-duration-format": "^1.3.0",
+    "nodemon": "^1.11.0",
     "request": "^2.69.0",
     "rxjs": "^5.0.0-beta.3",
     "socket.io": "^1.4.5",
